--- a/SchoolDiarySystem/Views/Comment/Update.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Update.cshtml
@@ -9,7 +9,7 @@
             <h3>Comment</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Professor")">Home</a>
                 </li>
                 <li>Update Comment</li>
             </ul>
