--- a/SchoolDiarySystem/Views/Student/Update.cshtml
+++ b/SchoolDiarySystem/Views/Student/Update.cshtml
@@ -9,7 +9,7 @@
             <h3>Student</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
                 <li>Update Student</li>
             </ul>
@@ -39,7 +39,7 @@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Date Of Birth *</label>
-                                @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control", type = "date", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.DayofBirth, "", new { @class = "text-danger" })
                                 <i class="far fa-calendar-alt"></i>
                             </div>
