--- a/SchoolDiarySystem/Views/Teacher/Create.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Create.cshtml
@@ -9,7 +9,7 @@
             <h3>Teacher</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Admin")">Home</a>
                 </li>
                 <li>Create Teacher</li>
             </ul>
