--- a/SchoolDiarySystem/Views/User/CreateAdmin.cshtml
+++ b/SchoolDiarySystem/Views/User/CreateAdmin.cshtml
@@ -9,7 +9,7 @@
             <h3>Create Admin</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Director")">Home</a>
                 </li>
                 <li>Create Admin</li>
             </ul>
