--- a/SchoolDiarySystem/Views/Review/ReviewComment.cshtml
+++ b/SchoolDiarySystem/Views/Review/ReviewComment.cshtml
@@ -9,7 +9,7 @@
     <h3>Review</h3>
     <ul>
         <li>
-            <a href="index-2.html">Home</a>
+            <a href="@Url.Action("Index", "Director")">Home</a>
         </li>
         <li>Review Comment</li>
     </ul>
@@ -21,8 +21,9 @@
                 <h3>Review Comment</h3>
             </div>
         </div>
-        @using (Html.BeginForm("ReviewComment", "Review", FormMethod.Post))
+        @using (Html.BeginForm("ReviewComment", "Review", FormMethod.Post, new { id="savereview" }))
         {
+            @Html.AntiForgeryToken()
             @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
             <form class="new-added-form">
                 <div class="row">
@@ -38,7 +39,7 @@
                         @Html.ValidationMessageFor(m => m.ReviewDate, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-12 form-group mg-t-8">
-                        <input type="submit" value="Review" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                        <input type="submit" id="submitreview" value="Review" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
                     </div>
                 </div>
             </form>
@@ -46,4 +47,6 @@
     </div>
 </div>
 
-@section Scripts {}
+@section Scripts {
+
+    }
