--- a/SchoolDiarySystem/Views/Teacher/Update.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Update.cshtml
@@ -44,7 +44,7 @@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Date Of Birth *</label>
-                                @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control air-datepicker", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control", type = "date", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.DayofBirth, "", new { @class = "text-danger" })
                                 <i class="far fa-calendar-alt"></i>
                             </div>
