--- a/SchoolDiarySystem/Views/Topic/Create.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Create.cshtml
@@ -9,7 +9,7 @@
             <h3>Topic</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Professor")">Home</a>
                 </li>
                 <li>Create Topic</li>
             </ul>
