Added Absence View to parent.

--- a/SchoolDiarySystem/Views/Absence/Index.cshtml
+++ b/SchoolDiarySystem/Views/Absence/Index.cshtml
@@ -97,7 +97,7 @@
                                         <span class="flaticon-more-button-of-three-dots"></span>
                                     </a>
                                     <div class="dropdown-menu dropdown-menu-right">
-                                        <a class="dropdown-item" href="@Url.Action("Update", "Class", new { id = item.ClassID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
+                                        <a class="dropdown-item" href="@Url.Action("Update", "Absence", new { id = item.AbsenceID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                     </div>
                                 </div>
                             </td>
