--- a/SchoolDiarySystem/Views/Absence/Create.cshtml
+++ b/SchoolDiarySystem/Views/Absence/Create.cshtml
@@ -28,7 +28,7 @@
                 <div class="row">
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
                         <label>Select Student *</label>
-                        @Html.DropDownListFor(m => m.ClassID, new SelectList(ViewBag.Student, "StudentID", "FullName"), new { @class = "select2" })
+                        @Html.DropDownListFor(m => m.ClassID, new SelectList(ViewBag.Class, "ClassID", "ClassNo"), new { @class = "select2" })
                         @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
@@ -42,13 +42,13 @@
                         @Html.ValidationMessageFor(m => m.AbsenceDate, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
-                        <label>Select Time *</label>
+                        <label>Select Reason *</label>
                         @Html.DropDownListFor(m => m.AbsenceReasoning, new SelectList(ViewBag.AbsenceReasoning), new { @class = "select2" })
-                        @Html.ValidationMessageFor(m => m.Time, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(m => m.AbsenceReasoning, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-xl-3 col-lg-6 col-12 form-group">
-                        <label>Select Time *</label>
-                        @Html.DropDownListFor(m => m.StudentID, new SelectList(ViewBag.Student), new { @class = "select2" })
+                        <label>Select Student *</label>
+                        @Html.DropDownListFor(m => m.StudentID, new SelectList(ViewBag.Student, "StudentID", "FullName"), new { @class = "select2" })
                         @Html.ValidationMessageFor(m => m.StudentID, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-12 form-group mg-t-8">
