Changed some columns in database. Also added Delete views.

--- a/SchoolDiarySystem/Views/Account/Login.cshtml
+++ b/SchoolDiarySystem/Views/Account/Login.cshtml
@@ -52,7 +52,7 @@
                         <img src="~/Content/img/favicon.png" alt="logo">
                         <img src="~/Content/img/SDMLogo.png" alt="logo">
                     </div>
-                    @Html.ValidationSummary(true, string.Empty, new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
                     <form class="login-form">
                         <div class="form-group">
                             <label>Username</label>
