--- a/SchoolDiarySystem/Views/Subject/Create.cshtml
+++ b/SchoolDiarySystem/Views/Subject/Create.cshtml
@@ -47,7 +47,7 @@
                                 @Html.ValidationMessageFor(m => m.TeacherID, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
-                                <input type="submit" value="Create" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                                <input type="submit" value="Create" class="btn-fill-md radius-4 text-light bg-light-sea-green" />
                             </div>
                         </div>
                     </form>
