--- a/SchoolDiarySystem/Views/Class/Index.cshtml
+++ b/SchoolDiarySystem/Views/Class/Index.cshtml
@@ -86,7 +86,7 @@
                                             <span class="flaticon-more-button-of-three-dots"></span>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right">
-                                            <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                            <a class="dropdown-item" href="@Url.Action("Delete", "Class", new { id = item.ClassID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
                                             <a class="dropdown-item" href="@Url.Action("Update", "Class", new { id = item.ClassID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                         </div>
                                         <div class="modal-box">
