--- a/SchoolDiarySystem/Views/Room/Index.cshtml
+++ b/SchoolDiarySystem/Views/Room/Index.cshtml
@@ -82,7 +82,7 @@
                                                 <span class="flaticon-more-button-of-three-dots"></span>
                                             </a>
                                             <div class="dropdown-menu dropdown-menu-right">
-                                                <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                                <a class="dropdown-item" href="@Url.Action("Delete", "Room", new { id = item.RoomID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
                                                 <a class="dropdown-item" href="@Url.Action("Update", "Room", new { id = item.RoomID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                             </div>
                                             <div class="modal-box">
