--- a/SchoolDiarySystem/Views/Student/Index.cshtml
+++ b/SchoolDiarySystem/Views/Student/Index.cshtml
@@ -73,17 +73,6 @@
                         {
                             <tr>
                                 <td class="text-center">
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input">
-                                        @if (item.Gender == "Male")
-                                        {
-                                            <img src="~/Content/img/figure/student2.png" alt="student">
-                                        }
-                                        else
-                                        {
-                                            <img src="~/Content/img/figure/student3.png" alt="student">
-                                        }
-                                    </div>
                                 </td>
                                 <td>
                                     @Html.DisplayFor(m => item.FirstName)
@@ -110,14 +99,15 @@
                                             <span class="flaticon-more-button-of-three-dots"></span>
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right">
-                                            <a class="dropdown-item" data-toggle="modal" data-target="#standard-modal"><i class="fas fa-times text-orange-red"></i>Delete</a>
+                                            <a class="dropdown-item" href="@Url.Action("Delete", "Student", new { id = item.StudentID })"><i class="fas fa-times text-orange-red"></i>Delete</a>
                                             <a class="dropdown-item" href="@Url.Action("Update", "Student", new { id = item.StudentID })"><i class="fas fa-cogs text-dark-pastel-green"></i>Update</a>
                                         </div>
-                                        <div class="modal-box">
+                                        <!--<div class="modal-box">-->
                                             <!-- Modal -->
-                                            <div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
+                                            <!--<div class="modal fade" id="standard-modal" tabindex="-1" role="dialog" aria-hidden="true" style="display: none;">
                                                 <div class="modal-dialog" role="document">
                                                     <div class="modal-content">
+                                                        @Html.HiddenFor(m => item.StudentID)
                                                         <div class="modal-header">
                                                             <h5 class="modal-title">Sure?</h5>
                                                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -137,7 +127,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
+                                        </div>-->
                                     </div>
                                 </td>
                             </tr>
