--- a/SchoolDiarySystem/Views/Teacher/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.Title = "TeacherDetails";
-    Layout = "~/Views/Shared/_LayoutParent.cshtml";
+    ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 @using SchoolDiarySystem.Models
 @model Teachers
@@ -9,7 +9,7 @@
     <h3>Teacher</h3>
     <ul>
         <li>
-            <a href="@Url.Action("Index", "MyKids")">Home</a>
+            <a href="@Url.Action("Index", "Admin")">Home</a>
         </li>
         <li>Teacher Details</li>
     </ul>
@@ -18,7 +18,8 @@
     <div class="card-body">
         <div class="heading-layout1">
             <div class="item-title">
-                <h3>Teacher Details</h3>
+                <h3>Are you sure you want to delete this teacher?</h3>
+                <br />
             </div>
         </div>
         <div class="single-info-details">
@@ -66,6 +67,12 @@
                         </tbody>
                     </table>
                 </div>
+                @using (Html.BeginForm("Delete", "Teacher", FormMethod.Post))
+                {
+                    <div class="col-12 form-group mg-t-8">
+                        <input type="submit" value="Delete" class="btn-fill-md radius-4 text-light bg-orange-red" />
+                    </div>
+                }
             </div>
         </div>
     </div>
