--- a/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutDirector.cshtml
@@ -133,7 +133,7 @@
                             <a href="@Url.Action("Index", "User")" class="nav-link"><i class="flaticon-user"></i><span>Users</span></a>
                         </li>
                         <li class="nav-item">
-                            <a href="@Url.Action("Index", "Absence")" class="nav-link"><i class="flaticon-calendar"></i><span>Absences</span></a>
+                            <a href="@Url.Action("Index", "StaffAbsence")" class="nav-link"><i class="flaticon-calendar"></i><span>Absences</span></a>
                         </li>
                         <li class="nav-item">
                             <a href="@Url.Action("CommentList", "Review")" class="nav-link"><i class="flaticon-script"></i><span>Comments</span></a>
