--- a/SchoolDiarySystem/Views/Schedule/Update.cshtml
+++ b/SchoolDiarySystem/Views/Schedule/Update.cshtml
@@ -26,8 +26,8 @@
             @Html.ValidationSummary(true, "", new { @class = "alert alert-danger" })
             <form class="new-added-form">
                 <div class="row">
+                    @Html.HiddenFor(m => m.ScheduleID)
                     <div class="col-xl-4 col-lg-6 col-12 form-group">
-                        @Html.HiddenFor(m => m.ScheduleID)
                         <label>Class Number *</label>
                         @Html.DropDownListFor(m => m.ClassID, new SelectList(ViewBag.Class, "ClassID", "ClassNo"), htmlAttributes: new { @class = "select2" })
                         @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
@@ -43,7 +43,7 @@
                         @Html.ValidationMessageFor(m => m.Time, "", new { @class = "text-danger" })
                     </div>
                     <div class="col-xl-4 col-lg-6 col-12 form-group">
-                        <label>Time *</label>
+                        <label>Day *</label>
                         @Html.DropDownListFor(m => m.Day, new SelectList(ViewBag.Days), htmlAttributes: new { @class = "select2" })
                         @Html.ValidationMessageFor(m => m.Day, "", new { @class = "text-danger" })
                     </div>
