--- a/SchoolDiarySystem/Views/Student/Update.cshtml
+++ b/SchoolDiarySystem/Views/Student/Update.cshtml
@@ -27,6 +27,7 @@
                     <form class="new-added-form">
                         <div class="row">
                             @Html.HiddenFor(m => m.StudentID)
+                            @Html.HiddenFor(m => m.DayofBirth)
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>First Name *</label>
                                 @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name", id = "firstname", autocomplete = "off" })
@@ -39,7 +40,7 @@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Date Of Birth *</label>
-                                @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control", type = "date", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
+                                @Html.TextBoxFor(m => m.DayofBirth, new { @class = "form-control air-datepicker", type = "text", disabled = "true", placeholder = "dd/MMMM/yyyy", id = "dob", autocomplete = "off" })
                                 @Html.ValidationMessageFor(m => m.DayofBirth, "", new { @class = "text-danger" })
                                 <i class="far fa-calendar-alt"></i>
                             </div>
